# sofe

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  community_server.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  sofe-evaluate.yml
policies/: api-gateway-no-throttling.yaml  apigateway-no-auth-public.yaml  apigateway-no-auth.yaml  budget-exceeded.yaml  cloudfront-no-compression.yaml  cloudfront-no-waf.yaml  cloudfront-public-origin-no-waf.yaml  dynamodb-provisioned-waste.yaml  ebs-gp2-upgrade.yaml  ecs-oversized-tasks.yaml  elasticache-idle.yaml  high-cost-service.yaml  idle-expensive-resource.yaml  idle-load-balancer.yaml  lambda-deprecated-runtime-chain.yaml  lambda-runtime-deprecated.yaml  nat-gateway-high-cost-low-traffic.yaml  nat-gateway-high-cost.yaml  no-idle-ec2.yaml  no-idle-rds.yaml  no-old-snapshots.yaml  no-oversized-staging.yaml  no-public-without-waf.yaml  no-unattached-ebs.yaml  rds-no-multi-az-prod.yaml  require-cost-tags.yaml  resource-cost-exceeds-50.yaml  s3-encryption-required.yaml  s3-lifecycle-required.yaml  s3-public-access.yaml  s3-require-environment-tag.yaml  s3-versioning-required.yaml  sagemaker-idle-endpoints.yaml  secret-not-accessed-90d.yaml  secrets-not-rotated.yaml  spot-instance-usage.yaml
sofe/: __init__.py
sofe/collectors/: __init__.py
sofe/collectors/aws/: apigateway.py  cloudfront.py  cost.py  dynamodb.py  ebs.py  ecs.py  eks.py  elasticache.py  lambda_.py  natgateway.py  redshift.py  route53.py  (+2 more)
sofe/engine/: __init__.py  architecture.py
sofe/loader/: __init__.py
sofe/models/: __init__.py
sofe/remediation/: __init__.py  commands.py
tests/: test_cli_outputs.py  test_evaluate_real_aws.py  test_validate.py
