[project]
name = "sofe"
version = "0.1.0"
description = "Stairway Open FinOps Engine — FinOps Policies as Code"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
sofe = "sofe.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
