[project]
name = "sofe"
version = "0.3.0"
description = "Stairway Open FinOps Engine — FinOps Policies as Code for AWS"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Carlos Cortez", email = "carlos@cortez.cloud"}]
readme = "README.md"
keywords = ["finops", "aws", "cloud-governance", "policy-as-code", "cost-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/breakingthecloud/sofe"
Repository = "https://github.com/breakingthecloud/sofe"
Issues = "https://github.com/breakingthecloud/sofe/issues"

[project.scripts]
sofe = "sofe.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sofe*"]
